force-app/main/default/objects/IME_SC_CAc_Responsibility__c/IME_SC_CAc_Responsibility__c.object-meta.xml
<CustomObject>
    <description>Junction object between Contact and Customer account to be able to represent the relationship between these.</description>
    <label>CAc Responsibility</label>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>CAc Responsibility Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAc Responsibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>