force-app/main/default/objects/IME_SC_CAc_Responsibility__c/fields/CA_Billing_country__c.field-meta.xml
<CustomField>
    <fullName>CA_Billing_country__c</fullName>
    <description>This field is created as per case 03280130</description>
    <formula>IME_SC_Customer_Account__r.Billing_Country__r.Iso31663Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Billing Country</label>
    <type>Text</type>
</CustomField>