force-app/main/default/objects/IME_SC_CAc_Responsibility__c/fields/IME_CAc_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>IME_CAc_Responsibility__c</fullName>
    <label>CAc Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Change of IM Rep</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Main Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>