force-app/main/default/objects/IME_SC_CAc_Responsibility__c/fields/IME_SC_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>IME_SC_Customer_Account__c</fullName>
    <label>Customer ID</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>CAc Responsibilities</relationshipLabel>
    <relationshipName>CAc_Responsibilities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>