force-app/main/default/objects/IME_SC_CAc_Responsibility__c/fields/IME_SC_No_Longer_With_Company__c.field-meta.xml
<CustomField>
    <fullName>IME_SC_No_Longer_With_Company__c</fullName>
    <formula>IME_SC_Contact__r.IM_No_Longer_With_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Longer With Company</label>
    <type>Checkbox</type>
</CustomField>