force-app/main/default/objects/IME_SC_CAc_Responsibility__c/fields/Resp_Active__c.field-meta.xml
<CustomField>
    <fullName>Resp_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Resp. Active</label>
    <type>Checkbox</type>
</CustomField>