force-app/main/default/objects/IME_SC_CAc_Responsibility__c/validationRules/IME_Can_not_Edit_after_Save.validationRule-meta.xml
<ValidationRule>
    <fullName>IME_Can_not_Edit_after_Save</fullName>
    <active>true</active>
    <description>You are not able to edit the field, Responsibility after you save it.</description>
    <errorConditionFormula>ISCHANGED(IME_CAc_Responsibility__c )</errorConditionFormula>
    <errorMessage>You are not able to change the assigned responsibility once it has been given.</errorMessage>
</ValidationRule>